samples/_failures_safe/1761492833_ec1189_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a575f4a6.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_a575f4a6.c:184:9: error: expected expression at end of input
  184 |         return (Event)
      |         ^~~~~~
./samples/SAFE/__tmp_a575f4a6.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a575f4a6.c:184:9: error: expected declaration or statement at end of input
